<resources>
    <string name="huki_app_name">HuKi</string>
    <string name="huki_app_name_debug">HuKi-Debug</string>
    <string name="common_percentage" translatable="false">%1$d%%</string>
    <string name="error_message_unknown">Unexpected error has occurred!\nThe error has been sent for further investigation!</string>
    <string name="error_message_missing_osm_id">The place with the corresponding OSM ID does not exist.</string>
    <string name="error_message_too_many_requests">Too many requests initiated from the device! Please try again later.</string>
    <string name="error_message_gateway_timeout">Openstreetmap timeout! Please try again.</string>
    <string name="error_message_unknown_host">Please check your internet connection and try again later.</string>
    <string name="error_message_gpx_parse_failed">Cannot process GPX. Please contact us.</string>
    <string name="error_message_gpx_uri_null">Unsuccessful choice. Try again with a valid GPX file.</string>
    <string name="error_message_google_maps_share_failed">Couldn\'t find the shared Google Maps place.</string>
    <string name="error_refresh_button">Refresh</string>
    <string name="default_distance_template_m">%s m</string>
    <string name="default_distance_template_km">%s km</string>
    <string name="default_date_today">Today</string>
    <string name="default_date_yesterday">Yesterday</string>
    <string name="default_date_monday">Monday</string>
    <string name="default_date_tuesday">Tuesday</string>
    <string name="default_date_wednesday">Wednesday</string>
    <string name="default_date_thursday">Thursday</string>
    <string name="default_date_friday">Friday</string>
    <string name="default_date_saturday">Saturday</string>
    <string name="default_date_sunday">Sunday</string>
    <string name="default_save_button">Save</string>
    <string name="default_cancel_button">Cancel</string>
    <string name="accessibility_home_fab_layers">Layers</string>
    <string name="accessibility_home_fab_route_planner">Route planner</string>
    <string name="accessibility_home_fab_my_location">My location</string>
    <string name="accessibility_home_fab_settings">Settings</string>
    <string name="accessibility_home_fab_history">History</string>
    <string name="accessibility_home_fab_place_categories">Place Categories</string>
    <string name="accessibility_home_fab_discover">Discover</string>
    <string name="accessibility_home_fab_hike_mode">Hike mode</string>
    <string name="accessibility_home_fab_hike_mode_compass">Live Compass</string>
    <string name="accessibility_home_gpx_visibility">Switch GPX visibility</string>
    <string name="accessibility_home_zoom_in">Zoom in</string>
    <string name="accessibility_home_zoom_out">Zoom out</string>
    <string name="accessibility_okt_routes_action_button">%s action button</string>
    <string name="search_bar_hint">Search for places</string>
    <string name="location_formatter_template" translatable="false">(%s)</string>
    <string name="place_finder_empty_message">No results found</string>
    <string name="place_finder_my_location_button">My Location</string>
    <string name="place_finder_my_location_error_null_location">No last known location found. Please fix your GPS signal.</string>
    <string name="place_finder_pick_location_button">Map Pick</string>
    <string name="place_finder_pick_location_message">Pick the location with long click!</string>
    <string name="place_finder_show_more_history">Earlier history</string>
    <string name="place_details_coordinates_text">Place coordinates</string>
    <string name="place_details_my_location_text">Actual location</string>
    <string name="place_details_pick_location_text">Chosen location</string>
    <string name="place_details_okt_waypoint_text">GPX waypoint</string>
    <string name="place_details_gpx_waypoint_text">OKT waypoint</string>
    <string name="place_details_finder_button">Finder</string>
    <string name="place_details_osm_id_template" translatable="false">OSM ID: %s\n</string>
    <string name="place_details_osm_tag_template" translatable="false">%s: %s\n</string>
    <string name="place_details_osm_tag_template_end" translatable="false">%s: %s</string>
    <string name="place_details_osm_tags_template" translatable="false">%s%s%s</string>
    <string name="hike_recommender_landscape_title_template">Hiking trails near %s</string>
    <string name="hike_recommender_place_title_template">Hiking trails around %s</string>
    <string name="hike_recommender_hiking_trails_button">National Trails</string>
    <string name="hike_recommender_termeszetjaro" translatable="false">Természetjáró</string>
    <string name="hike_recommender_kirandulastippek" translatable="false">Kirándulástippek</string>
    <string name="hike_recommender_aktivkalandor" translatable="false">Aktív Kalandor</string>
    <string name="home_bottom_sheet_directions_button">Google Nav</string>
    <string name="home_bottom_sheet_show_points_button">All points</string>
    <string name="home_bottom_sheet_route_plan_button">Route plan</string>
    <string name="home_bottom_sheet_route_plan_button_template">Route plan (%d)</string>
    <string name="home_bottom_sheet_osm_data_button">OSM Data</string>
    <string name="home_bottom_sheet_landscape_secondary">Landscape</string>
    <string name="gpx_details_bottom_sheet_start_button">Start</string>
    <string name="gpx_details_bottom_sheet_google_maps_header">Google Maps</string>
    <string name="gpx_details_bottom_sheet_google_maps_start">To start point</string>
    <string name="gpx_details_bottom_sheet_google_maps_end">To end point</string>
    <string name="gpx_details_bottom_sheet_waypoints_only_counter_template">%d waypoints</string>
    <string name="gpx_details_slope_range_min" translatable="false">-25%</string>
    <string name="gpx_details_slope_range_max" translatable="false">+25%</string>
    <string name="gpx_details_settings_slope_coloring">Slope coloring</string>
    <string name="gpx_details_settings_reverse_direction">GPX reversed direction</string>
    <string name="gpx_details_accessibility_visibility">Show GPX</string>
    <string name="gpx_details_accessibility_comments">Show comments</string>
    <string name="gpx_details_accessibility_google_maps">Navigate with Google Maps</string>
    <string name="gpx_details_accessibility_share">Share GPX</string>
    <string name="gpx_details_accessibility_settings">Settings</string>
    <string name="gpx_slope_explanation_title">Slope</string>
    <string name="gpx_slope_explanation_message">A 25% incline means that the terrain rises 25 meters over a horizontal distance of 100 meters.</string>
    <string name="gpx_slope_explanation_slope_column_title">Level</string>
    <string name="gpx_slope_explanation_desc_column_title">Difficulty</string>
    <string name="gpx_slope_explanation_zero" translatable="false">&#177;5%%</string>
    <string name="gpx_slope_explanation_negative_template" translatable="false">-%d%%</string>
    <string name="gpx_slope_explanation_positive_template" translatable="false">+%d%%</string>
    <string name="gpx_slope_explanation_negative_high_desc">Steep slope</string>
    <string name="gpx_slope_explanation_negative_mid_desc">Moderate slope</string>
    <string name="gpx_slope_explanation_zero_desc">Near flat area</string>
    <string name="gpx_slope_explanation_positive_mid_desc">Moderate climb</string>
    <string name="gpx_slope_explanation_positive_high_desc">Steep climb</string>
    <string name="my_location_rationale_title">Location permission</string>
    <string name="my_location_rationale_message">Device\'s location is needed for current location function!</string>
    <string name="my_location_rationale_positive_button">Allow</string>
    <string name="my_location_rationale_negative_button">Cancel</string>
    <string name="gps_not_available_title">Google Play Services</string>
    <string name="gps_not_available_message">Google Play Services is needed for GPS location monitoring</string>
    <string name="gps_not_available_positive_button">Okay</string>
    <string name="hiking_routes_empty_text">No results found</string>
    <string name="layers_base_layers_header">Base Layers</string>
    <string name="layers_mapnik_title">Mapnik</string>
    <string name="layers_open_topo_title">OpenTopo</string>
    <string name="layers_tuhu_title">TuHu</string>
    <string name="layers_google_satellite_title">Google Satellite</string>
    <string name="layers_merretekerjek_title">Bicycle</string>
    <string name="layers_hiking_layers_header">Hiking Layers</string>
    <string name="layers_hiking_hungarian_title">Hiking Layer</string>
    <string name="waypoint_comment_title">Destination comments</string>
    <string name="waypoint_comment_name_hint">Destination name</string>
    <string name="waypoint_comment_hint">Comment</string>
    <string name="waypoint_comment_info_button">The destination name and comment are included in the saved GPX file, so it can be retrieved at any time.</string>
    <string name="settings_map_scale_title">Map display magnification</string>
    <string name="settings_map_scale_description">Magnification can reduce image quality</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_system">System</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_offline_mode_title">Offline mode</string>
    <string name="settings_offline_mode_description">The app saves all of the visited parts of the map, so these can be used offline.</string>
    <string name="settings_offline_mode_description_long">All of the visited parts of the map are saved in a database for 14 days, which can be used offline.\n\nThe only thing to do, is to visit the necessary parts (meanwhile the app downloads them), in all of the desired zoom levels.\n\nThis is only needed if it\'s known that there won\'t be proper internet connection during the trip.\n\nIt can be tested by switching to airplane mode and make sure that all of the desired map parts are visible.</string>
    <string name="settings_contact_title">Contact</string>
    <string name="settings_contact_subtitle">I\'d be happy to receive any feedback, my goal is to create a useful app for everybody.</string>
    <string name="settings_email_title">Email:</string>
    <string name="settings_github_title">GitHub repository:</string>
    <string name="settings_email" translatable="false">huki.app@gmail.com</string>
    <string name="settings_github_repository_url" translatable="false">https://github.com/RolandMostoha/HuKi-Android/</string>
    <string name="settings_google_play_review_button">Google Play review</string>
    <string name="place_category_hike_recommendations_header_title">Hike recommendations</string>
    <string name="place_category_hike_recommendations_info">The GPX routes downloaded from the tour recommendations can be opened with the application.\n\nThese are my personal favorites, but I have no affiliation or interest in them.\n\nHuKi does not use the contents of the websites in any way; it only provides a navigation link that opens in an external browser.\n\nThe terms of the respective websites apply to the use of the content available on them.</string>
    <string name="okt_header_title">National Blue Trails</string>
    <string name="okt_official_info">Official site of The Blue Trail:\nhttp://www.kektura.hu/</string>
    <string name="landscapes_header_title">Landscapes and destinations</string>
    <string name="destinations_info">The hiking destinations featured in HuKi are the result of my personal research, with around 350 points of interest.\n\nI’ve tried to collect places that are worth visiting during a hike or an excursion.\n\nIf you know a great spot that’s missing, or notice any mistakes, feel free to reach out!</string>
</resources>