<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/space_large"
    android:paddingVertical="@dimen/space_large">

    <!-- Map scale factor title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settingsMapScaleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_map_scale_title"
            android:textAppearance="@style/DefaultTextAppearance.Bold.Medium" />

        <hu.mostoha.mobile.android.huki.views.InfoButtonView
            android:id="@+id/settingsMapScaleInfoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:messageRes="@string/settings_map_scale_description" />

    </LinearLayout>

    <!-- Map scale factor slider -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settingsMapScaleSliderFromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/DefaultTextAppearance.SemiBold.Small"
            tools:text="100%" />

        <com.google.android.material.slider.Slider
            android:id="@+id/settingsMapScaleSlider"
            style="@style/DefaultSliderStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settingsMapScaleSliderToText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/DefaultTextAppearance.SemiBold.Small"
            tools:text="200%" />

    </LinearLayout>

    <!-- Theme -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settingsThemeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:text="@string/settings_theme_title"
        android:textAppearance="@style/DefaultTextAppearance.Bold.Medium" />

    <RadioGroup
        android:id="@+id/settingsThemeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/settingsThemeSystem"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/settingsThemeSystem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/space_medium"
            android:paddingHorizontal="@dimen/space_extra_small"
            android:text="@string/settings_theme_system"
            android:textAppearance="@style/DefaultTextAppearance.Regular.Small" />

        <RadioButton
            android:id="@+id/settingsThemeLight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/space_medium"
            android:paddingHorizontal="@dimen/space_extra_small"
            android:text="@string/settings_theme_light"
            android:textAppearance="@style/DefaultTextAppearance.Regular.Small" />

        <RadioButton
            android:id="@+id/settingsThemeDark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/space_medium"
            android:paddingHorizontal="@dimen/space_extra_small"
            android:text="@string/settings_theme_dark"
            android:textAppearance="@style/DefaultTextAppearance.Regular.Small" />

    </RadioGroup>

    <!-- Offline mode -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settingsOfflineModeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_offline_mode_title"
            android:textAppearance="@style/DefaultTextAppearance.Bold.Medium" />

        <hu.mostoha.mobile.android.huki.views.InfoButtonView
            android:id="@+id/settingsOfflineModeInfoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:messageRes="@string/settings_offline_mode_description_long" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settingsOfflineModeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_settings_success"
        android:drawablePadding="@dimen/space_medium"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/settings_offline_mode_description"
        android:textAppearance="@style/DefaultTextAppearance.Regular.ExtraSmall" />

    <!-- Contact -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settingsContactTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:text="@string/settings_contact_title"
        android:textAppearance="@style/DefaultTextAppearance.Bold.Medium" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settingsContactSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/settings_contact_subtitle"
        android:textAppearance="@style/DefaultTextAppearance.Regular.ExtraSmall" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settingsEmailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:text="@string/settings_email_title"
        android:textAppearance="@style/DefaultTextAppearance.Regular.Small" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settingsEmailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:text="@string/settings_email"
        android:textAppearance="@style/DefaultTextAppearance.Regular.Small" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settingsGitHubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:text="@string/settings_github_title"
        android:textAppearance="@style/DefaultTextAppearance.Regular.Small" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settingsGitHubText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:text="@string/settings_github_repository_url"
        android:textAppearance="@style/DefaultTextAppearance.Regular.Small" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsGooglePlayReviewButton"
        style="@style/DefaultButton.Contained.Shadowless.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_large"
        android:text="@string/settings_google_play_review_button"
        app:icon="@drawable/ic_settings_play_review" />

</LinearLayout>